* Fixed height on parent chat panel div to allow clicking behind collapsed window when a sibling window is expanded.

--- a/forum/styles/prosilver/theme/sitechat.css
+++ b/forum/styles/prosilver/theme/sitechat.css
@@ -5,6 +5,7 @@
 	bottom: 0%;
 	right: 2%;
 	font-size: 16px !important;
+	height: 25px;
 }
 
 .chatWindow
